Revised preclass questions for 09-22-15.

--- a/2015-09-22/workq/Makefile
+++ b/2015-09-22/workq/Makefile
@@ -1,12 +1,10 @@
 .PHONY: test
 
-LFLAGS=-std=c99 -lm 
-
 test: workq
 	./workq 4
 
 workq: workq.o 
-	$(CC) -o $@ $^ -lpthread -lm
+	$(CC) -o $@ $^ -lpthread -lm -std=c99
 
 %.o: %.c
 	$(CC) -c -O3 $<
